# otus-cpp-basics

./: CMakeLists.txt  README
src/: main.cpp
src/homework_1/: CMakeLists.txt
src/homework_2/: CMakeLists.txt  main.cpp
src/homework_3/: CMakeLists.txt  main.cpp
src/homework_4/: Ball.cpp  Ball.hpp  Color.cpp  Color.hpp  Dust.cpp  Dust.h  Physics.cpp  Physics.hpp  Point.hpp  World.cpp  World.hpp
src/homework_4/black_box/: Application.cpp
src/homework_5/: CMakeLists.txt  statistics.cpp
src/homework_6/: CMakeLists.txt  array.h  dual_list.h  main.cpp  single_list.h
src/homework_7/: CMakeLists.txt  array.h  array_tests.cpp  common.h  single_list_tests.cpp
src/homework_8/: CMakeLists.txt  topk_words.cpp
